Fix backdrop-filter on Safari

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body {
 	/* background-color: rgba(220, 220, 220, 0.9); */
 	background-color: rgba(0, 0, 0, 0.3);
 	backdrop-filter: blur(4px) saturate(150%);
+	-webkit-backdrop-filter: blur(4px) saturate(150%);
 	/* box-shadow: 0 6px 20px 5px rgba(0, 0, 0, 0.0); */
 	/* box-shadow: 0 3px 2px 0px rgba(0, 0, 0, 0.2); */
 	max-width: 75ch;
